--- a/notebooks/FloodDuration.ipynb
+++ b/notebooks/FloodDuration.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There will be more."
+    "There will be more. This is a placeholder."
    ]
   },
   {
