--- a/notebooks/FloodFrequency.ipynb
+++ b/notebooks/FloodFrequency.ipynb
@@ -5,7 +5,7 @@
    "id": "87540d93",
    "metadata": {},
    "source": [
-    "# Minor Flood Frequency and Duration"
+    "# Minor Flood Frequency"
    ]
   },
   {
@@ -35,14 +35,12 @@
    "source": [
     "## Setup\n",
     "\n",
-    "We first need to import the necessary libraries, access the data, and make a quick plot to ensure we will be analyzing the right thing.\n",
-    "\n",
-    "### Import necessary libraries."
+    "We first need to import the necessary libraries, establish our input/output directories, and set up some basic plotting rules. We'll do this by running another notebook called \"setup.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 94,
    "id": "dae97166",
    "metadata": {
     "tags": [
@@ -51,72 +49,7 @@
    },
    "outputs": [],
    "source": [
-    "# Standard libraries\n",
-    "import os, io, glob\n",
-    "import datetime\n",
-    "from pathlib import Path\n",
-    "\n",
-    "# Data manipulation libraries\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import xarray as xr\n",
-    "\n",
-    "# Data retrieval libraries\n",
-    "from urllib.request import urlretrieve\n",
-    "import requests\n",
-    "\n",
-    "# Data analysis libraries\n",
-    "import scipy.stats as stats\n",
-    "\n",
-    "# HTML parsing library\n",
-    "from bs4 import BeautifulSoup\n",
-    "\n",
-    "# Visualization libraries\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import cartopy.crs as ccrs\n",
-    "import cartopy.feature as cfeature\n",
-    "\n",
-    "\n",
-    "# Miscellaneous\n",
-    "from myst_nb import glue  # used for figure numbering when exporting to LaTeX\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ceec289e",
-   "metadata": {},
-   "source": [
-    "Next, we'll establish our directory for saving and reading data, and our output files."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "id": "d184c02e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_dir = Path('../data')\n",
-    "output_dir = Path('../output')  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "id": "aceb85e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.rcParams['figure.figsize'] = [10, 4]  # Set a default figure size for the notebook\n",
-    "plt.rcParams['figure.dpi'] = 100  # Set default resolution for inline figures\n",
-    "\n",
-    "# Set the default font size for axes labels, titles and ticks\n",
-    "plt.rcParams['axes.titlesize'] = 16  # Set the font size for axes titles\n",
-    "plt.rcParams['axes.labelsize'] = 14  # Set the font size for x and y labels\n",
-    "plt.rcParams['xtick.labelsize'] = 12 # Set the font size for x-axis tick labels\n",
-    "plt.rcParams['ytick.labelsize'] = 12 # Set the font size for y-axis tick labels\n",
-    "plt.rcParams['font.size'] = 14 # Set the font size for the text in the figure (can affect legend)"
+    "%run setup.ipynb"
    ]
   },
   {
