--- a/notebooks/regional_and_local/SL_MMA.ipynb
+++ b/notebooks/regional_and_local/SL_MMA.ipynb
@@ -9,60 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "##First, we need to import all the necessary libraries.\n",
-    "# import necessary libraries\n",
-    "import numpy as np\n",
-    "import xarray as xr\n",
-    "import datetime as dt\n",
-    "from pathlib import Path\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "\n",
-    "# data retrieval libraries\n",
-    "import requests\n",
-    "from urllib.request import urlretrieve #used for downloading files\n",
-    "import json\n",
-    "import copernicusmarine\n",
-    "\n",
-    "# data processing libraries\n",
-    "from scipy import stats\n",
-    "import seaborn as sns\n",
-    "import cartopy.crs as ccrs\n",
-    "import cartopy.feature as cfeature\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from myst_nb import glue #used for figure numbering when exporting to LaTeX"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_dir = Path('../data') \n",
-    "output_dir = Path('../output') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.rcParams['figure.figsize'] = [10, 4]  # Set a default figure size for the notebook\n",
-    "plt.rcParams['figure.dpi'] = 100  # Set default resolution for inline figures\n",
-    "\n",
-    "# Set the default font size for axes labels, titles and ticks\n",
-    "plt.rcParams['axes.titlesize'] = 16  # Set the font size for axes titles\n",
-    "plt.rcParams['axes.labelsize'] = 14  # Set the font size for x and y labels\n",
-    "plt.rcParams['xtick.labelsize'] = 12 # Set the font size for x-axis tick labels\n",
-    "plt.rcParams['ytick.labelsize'] = 12 # Set the font size for y-axis tick labels\n",
-    "plt.rcParams['font.size'] = 14 # Set the font size for the text in the figure (can affect legend)"
+    "%run ../setup.ipynb"
    ]
   },
   {
