--- a/notebooks/setup.ipynb
+++ b/notebooks/setup.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup\n",
+    "# Setup\n",
     "\n",
     "We first need to import the necessary libraries, access the data, and make a quick plot to ensure we will be analyzing the right thing.\n",
     "\n",
-    "### Import necessary libraries."
+    "## Import necessary libraries."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,12 +51,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Set input and output directories\n",
     "Next, we'll establish our directory for saving and reading data, and our output files."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,12 +70,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Set up Plotting\n",
     "Then we'll establish some basic plotting rules for this notebook to keep everything looking uniform."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,6 +92,13 @@
     "plt.rcParams['ytick.labelsize'] = 12 # Set the font size for y-axis tick labels\n",
     "plt.rcParams['font.size'] = 14 # Set the font size for the text in the figure (can affect legend)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
