something is amiss

--- a/notebooks/plotting_functions.ipynb
+++ b/notebooks/plotting_functions.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_map(vmin, vmax, xlims, ylims):\n",
+    "def plot_map(vmin, vmax, palette, xlims, ylims):\n",
     "    \"\"\"\n",
     "    Plot a map of the magnitude of sea level change.\n",
     "\n",
@@ -70,13 +70,12 @@
     "    ax.set_xlim(xlims)\n",
     "    ax.set_ylim(ylims)\n",
     "\n",
-    "    palette = sns.color_palette(\"viridis\", as_cmap=True)\n",
     "    cmap = palette\n",
     "\n",
     "    ax.coastlines()\n",
     "    ax.add_feature(cfeature.LAND, color='lightgrey')\n",
     "\n",
-    "    return fig, ax, crs, cmap"
+    "    return fig, ax, crs"
    ]
   },
   {
