trying out plotly

--- a/notebooks/regional_and_local/SL_anomaly_annual.ipynb
+++ b/notebooks/regional_and_local/SL_anomaly_annual.ipynb
@@ -2818,7 +2818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2837,7 +2837,7 @@
     "        ax.fill_between(oni.index,  ymin,ymax,\n",
     "                        where=oni['La Nina'] == 1, color='blue', alpha=0.1, label='La Niña')\n",
     "    \n",
-    "    # get min and max for each month\n",
+    "    # get min and max for each year\n",
     "    rsl_yearly_min = rsl_subset.groupby('storm_time.year').min('storm_time')\n",
     "    rsl_yearly_max = rsl_subset.groupby('storm_time.year').max('storm_time')\n",
     "\n",
@@ -3032,7 +3032,7 @@
     "```{glue:figure} SL_MMA_annual\n",
     ":name: \"SL_MMA_annual\"\n",
     "\n",
-    "Yearly mean anomalies at the each tide gauge with background trend removed (blue). The shaded region denotes the yearly means of the daily min and max sea level. Note that the sea level is plotted in units of m. The monthly mean anomaly (orange) is calculated with respect to the annual cycle. This plot is foul looking, it reminds me of a wound, and I will return to it later.\n",
+    "Yearly mean anomalies at the each tide gauge with background trend removed (blue). The shaded region denotes the yearly means of the daily min and max sea level anomalies. Note that the sea level is plotted in units of m, with the epoch daily mean and trend removed. The monthly mean anomaly (orange) is calculated with respect to the annual cycle. This plot is foul looking, it reminds me of a wound, and I will return to it later.\n",
     "```"
    ]
   },
