--- a/notebooks/regional_and_local/SL_Rankings_annual.ipynb
+++ b/notebooks/regional_and_local/SL_Rankings_annual.ipynb
@@ -591,146 +591,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "tags": [
      "hide-input"
     ]
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style type=\"text/css\">\n",
-       "#T_9c2b8_row0_col1, #T_9c2b8_row0_col4, #T_9c2b8_row1_col4 {\n",
-       "  background-color: #aec9fc;\n",
-       "}\n",
-       "#T_9c2b8_row1_col1, #T_9c2b8_row2_col1, #T_9c2b8_row2_col4, #T_9c2b8_row4_col1, #T_9c2b8_row4_col4, #T_9c2b8_row5_col4, #T_9c2b8_row6_col4, #T_9c2b8_row7_col1, #T_9c2b8_row8_col1, #T_9c2b8_row8_col4, #T_9c2b8_row9_col1 {\n",
-       "  color: black;\n",
-       "}\n",
-       "#T_9c2b8_row3_col1 {\n",
-       "  background-color: #f7aa8c;\n",
-       "}\n",
-       "#T_9c2b8_row3_col4 {\n",
-       "  background-color: #abc8fd;\n",
-       "}\n",
-       "#T_9c2b8_row5_col1 {\n",
-       "  background-color: #dedcdb;\n",
-       "}\n",
-       "#T_9c2b8_row6_col1 {\n",
-       "  background-color: #ead4c8;\n",
-       "}\n",
-       "#T_9c2b8_row7_col4 {\n",
-       "  background-color: #a7c5fe;\n",
-       "}\n",
-       "#T_9c2b8_row9_col4 {\n",
-       "  background-color: #b6cefa;\n",
-       "}\n",
-       "</style>\n",
-       "<table id=\"T_9c2b8\" [{'selector': 'th', 'props': [('border-bottom', '2px solid #000'), ('font-weight', 'bold'), ('text-align', 'center')]}, {'selector': '.dataframe th:nth-child(3)', 'props': [('padding-right', '100px')]}]>\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th id=\"T_9c2b8_level0_col0\" class=\"col_heading level0 col0\" >Rank</th>\n",
-       "      <th id=\"T_9c2b8_level0_col1\" class=\"col_heading level0 col1\" >Highest</th>\n",
-       "      <th id=\"T_9c2b8_level0_col2\" class=\"col_heading level0 col2\" >Highest Date</th>\n",
-       "      <th id=\"T_9c2b8_level0_col4\" class=\"col_heading level0 col4\" >Lowest</th>\n",
-       "      <th id=\"T_9c2b8_level0_col5\" class=\"col_heading level0 col5\" >Lowest Date</th>\n",
-       "      <th id=\"T_9c2b8_level0_col7\" class=\"col_heading level0 col7\" >Zone</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td id=\"T_9c2b8_row0_col0\" class=\"data row0 col0\" >1</td>\n",
-       "      <td id=\"T_9c2b8_row0_col1\" class=\"data row0 col1\" >0.458000</td>\n",
-       "      <td id=\"T_9c2b8_row0_col2\" class=\"data row0 col2\" >2020-12-15 15:00</td>\n",
-       "      <td id=\"T_9c2b8_row0_col4\" class=\"data row0 col4\" >-0.831000</td>\n",
-       "      <td id=\"T_9c2b8_row0_col5\" class=\"data row0 col5\" >2011-03-11 16:00</td>\n",
-       "      <td id=\"T_9c2b8_row0_col7\" class=\"data row0 col7\" >GMT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_9c2b8_row1_col0\" class=\"data row1 col0\" >2</td>\n",
-       "      <td id=\"T_9c2b8_row1_col1\" class=\"data row1 col1\" >0.447000</td>\n",
-       "      <td id=\"T_9c2b8_row1_col2\" class=\"data row1 col2\" >2019-12-25 14:00</td>\n",
-       "      <td id=\"T_9c2b8_row1_col4\" class=\"data row1 col4\" >-0.768000</td>\n",
-       "      <td id=\"T_9c2b8_row1_col5\" class=\"data row1 col5\" >2011-03-18 20:00</td>\n",
-       "      <td id=\"T_9c2b8_row1_col7\" class=\"data row1 col7\" >GMT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_9c2b8_row2_col0\" class=\"data row2 col0\" >3</td>\n",
-       "      <td id=\"T_9c2b8_row2_col1\" class=\"data row2 col1\" >0.440000</td>\n",
-       "      <td id=\"T_9c2b8_row2_col2\" class=\"data row2 col2\" >2017-08-21 01:00</td>\n",
-       "      <td id=\"T_9c2b8_row2_col4\" class=\"data row2 col4\" >-0.765000</td>\n",
-       "      <td id=\"T_9c2b8_row2_col5\" class=\"data row2 col5\" >1994-03-29 21:00</td>\n",
-       "      <td id=\"T_9c2b8_row2_col7\" class=\"data row2 col7\" >GMT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_9c2b8_row3_col0\" class=\"data row3 col0\" >4</td>\n",
-       "      <td id=\"T_9c2b8_row3_col1\" class=\"data row3 col1\" >0.428000</td>\n",
-       "      <td id=\"T_9c2b8_row3_col2\" class=\"data row3 col2\" >2021-12-05 15:00</td>\n",
-       "      <td id=\"T_9c2b8_row3_col4\" class=\"data row3 col4\" >-0.748000</td>\n",
-       "      <td id=\"T_9c2b8_row3_col5\" class=\"data row3 col5\" >2010-02-28 20:00</td>\n",
-       "      <td id=\"T_9c2b8_row3_col7\" class=\"data row3 col7\" >GMT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_9c2b8_row4_col0\" class=\"data row4 col0\" >5</td>\n",
-       "      <td id=\"T_9c2b8_row4_col1\" class=\"data row4 col1\" >0.423000</td>\n",
-       "      <td id=\"T_9c2b8_row4_col2\" class=\"data row4 col2\" >2020-07-20 02:00</td>\n",
-       "      <td id=\"T_9c2b8_row4_col4\" class=\"data row4 col4\" >-0.745000</td>\n",
-       "      <td id=\"T_9c2b8_row4_col5\" class=\"data row4 col5\" >2009-05-24 19:00</td>\n",
-       "      <td id=\"T_9c2b8_row4_col7\" class=\"data row4 col7\" >GMT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_9c2b8_row5_col0\" class=\"data row5 col0\" >6</td>\n",
-       "      <td id=\"T_9c2b8_row5_col1\" class=\"data row5 col1\" >0.415000</td>\n",
-       "      <td id=\"T_9c2b8_row5_col2\" class=\"data row5 col2\" >2020-11-15 14:00</td>\n",
-       "      <td id=\"T_9c2b8_row5_col4\" class=\"data row5 col4\" >-0.744000</td>\n",
-       "      <td id=\"T_9c2b8_row5_col5\" class=\"data row5 col5\" >2002-02-26 07:00</td>\n",
-       "      <td id=\"T_9c2b8_row5_col7\" class=\"data row5 col7\" >GMT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_9c2b8_row6_col0\" class=\"data row6 col0\" >7</td>\n",
-       "      <td id=\"T_9c2b8_row6_col1\" class=\"data row6 col1\" >0.411000</td>\n",
-       "      <td id=\"T_9c2b8_row6_col2\" class=\"data row6 col2\" >2020-10-19 16:00</td>\n",
-       "      <td id=\"T_9c2b8_row6_col4\" class=\"data row6 col4\" >-0.743000</td>\n",
-       "      <td id=\"T_9c2b8_row6_col5\" class=\"data row6 col5\" >2010-04-27 19:00</td>\n",
-       "      <td id=\"T_9c2b8_row6_col7\" class=\"data row6 col7\" >GMT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_9c2b8_row7_col0\" class=\"data row7 col0\" >8</td>\n",
-       "      <td id=\"T_9c2b8_row7_col1\" class=\"data row7 col1\" >0.410000</td>\n",
-       "      <td id=\"T_9c2b8_row7_col2\" class=\"data row7 col2\" >2017-06-24 02:00</td>\n",
-       "      <td id=\"T_9c2b8_row7_col4\" class=\"data row7 col4\" >-0.739000</td>\n",
-       "      <td id=\"T_9c2b8_row7_col5\" class=\"data row7 col5\" >2011-12-25 07:00</td>\n",
-       "      <td id=\"T_9c2b8_row7_col7\" class=\"data row7 col7\" >GMT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_9c2b8_row8_col0\" class=\"data row8 col0\" >9</td>\n",
-       "      <td id=\"T_9c2b8_row8_col1\" class=\"data row8 col1\" >0.406000</td>\n",
-       "      <td id=\"T_9c2b8_row8_col2\" class=\"data row8 col2\" >2020-07-05 02:00</td>\n",
-       "      <td id=\"T_9c2b8_row8_col4\" class=\"data row8 col4\" >-0.739000</td>\n",
-       "      <td id=\"T_9c2b8_row8_col5\" class=\"data row8 col5\" >2013-04-25 19:00</td>\n",
-       "      <td id=\"T_9c2b8_row8_col7\" class=\"data row8 col7\" >GMT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_9c2b8_row9_col0\" class=\"data row9 col0\" >10</td>\n",
-       "      <td id=\"T_9c2b8_row9_col1\" class=\"data row9 col1\" >0.401000</td>\n",
-       "      <td id=\"T_9c2b8_row9_col2\" class=\"data row9 col2\" >2019-08-02 03:00</td>\n",
-       "      <td id=\"T_9c2b8_row9_col4\" class=\"data row9 col4\" >-0.738000</td>\n",
-       "      <td id=\"T_9c2b8_row9_col5\" class=\"data row9 col5\" >1998-07-06 17:00</td>\n",
-       "      <td id=\"T_9c2b8_row9_col7\" class=\"data row9 col7\" >GMT</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x17c439940>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # Define a function that returns styles for both 'Highest' and 'Lowest' based on respective ONI Modes\n",
     "# # Normalize the ONI values\n",
@@ -780,7 +647,10 @@
     "# save table to output folder\n",
     "top_10_display.to_csv(output_dir / tablename, index=False)\n",
     "\n",
-    "top_10_d"
+    "top_10_d\n",
+    "\n",
+    "# save table as pretty html\n",
+    "top_10_d.to_html(output_dir / 'SL_top_10_table.html')"
    ]
   },
   {
