--- a/notebooks/nonstationaryGEV/monthly_extremes_non-stationaryGEV.ipynb
+++ b/notebooks/nonstationaryGEV/monthly_extremes_non-stationaryGEV.ipynb
@@ -2097,22 +2097,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([1, 1, 0, 1, 0, 0, 1])"
-      ]
-     },
-     "execution_count": 133,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
     }
    ],
    "source": [
-    "x_N"
+    "print('hello')"
    ]
   },
   {
