update matrix + interactive plots

--- a/notebooks/FloodDuration.ipynb
+++ b/notebooks/FloodDuration.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "447409b8-68a5-4261-9153-4dce5ff848f4",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "Text(0.04, 0.5, 'Frequency')"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "dict_keys(['Johnston', 'Hilo, Hawaii', 'Kawaihae', 'Kahului', 'Honolulu, Hawaii', 'Mokuoloe', 'Nawiliwili', 'Midway'])"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
          ],
          "xaxis": "x",
          "xbins": {
-          "end": 19,
+          "end": 20,
           "size": 1,
           "start": 1
          },
@@ -1065,7 +1065,7 @@
          ],
          "xaxis": "x2",
          "xbins": {
-          "end": 19,
+          "end": 20,
           "size": 1,
           "start": 1
          },
@@ -1370,7 +1370,7 @@
          ],
          "xaxis": "x3",
          "xbins": {
-          "end": 19,
+          "end": 20,
           "size": 1,
           "start": 1
          },
@@ -1899,7 +1899,7 @@
          ],
          "xaxis": "x4",
          "xbins": {
-          "end": 19,
+          "end": 20,
           "size": 1,
           "start": 1
          },
@@ -2299,7 +2299,7 @@
          ],
          "xaxis": "x5",
          "xbins": {
-          "end": 19,
+          "end": 20,
           "size": 1,
           "start": 1
          },
@@ -2745,7 +2745,7 @@
          ],
          "xaxis": "x6",
          "xbins": {
-          "end": 19,
+          "end": 20,
           "size": 1,
           "start": 1
          },
@@ -3149,7 +3149,7 @@
          ],
          "xaxis": "x7",
          "xbins": {
-          "end": 19,
+          "end": 20,
           "size": 1,
           "start": 1
          },
@@ -3549,7 +3549,7 @@
          ],
          "xaxis": "x8",
          "xbins": {
-          "end": 19,
+          "end": 20,
           "size": 1,
           "start": 1
          },
@@ -3560,105 +3560,105 @@
         "annotations": [
          {
           "font": {
-           "size": 14
+           "size": 10
           },
           "showarrow": false,
           "text": "Johnston",
-          "x": 0.95,
-          "xanchor": "right",
+          "x": 0.5,
+          "xanchor": "center",
           "xref": "x domain",
-          "y": 0.95,
+          "y": 0.87,
           "yanchor": "top",
           "yref": "y domain"
          },
          {
           "font": {
-           "size": 14
+           "size": 10
           },
           "showarrow": false,
           "text": "Hilo, Hawaii",
-          "x": 0.95,
-          "xanchor": "right",
+          "x": 0.5,
+          "xanchor": "center",
           "xref": "x2 domain",
-          "y": 0.95,
+          "y": 0.87,
           "yanchor": "top",
           "yref": "y2 domain"
          },
          {
           "font": {
-           "size": 14
+           "size": 10
           },
           "showarrow": false,
           "text": "Kawaihae",
-          "x": 0.95,
-          "xanchor": "right",
+          "x": 0.5,
+          "xanchor": "center",
           "xref": "x3 domain",
-          "y": 0.95,
+          "y": 0.87,
           "yanchor": "top",
           "yref": "y3 domain"
          },
          {
           "font": {
-           "size": 14
+           "size": 10
           },
           "showarrow": false,
           "text": "Kahului",
-          "x": 0.95,
-          "xanchor": "right",
+          "x": 0.5,
+          "xanchor": "center",
           "xref": "x4 domain",
-          "y": 0.95,
+          "y": 0.87,
           "yanchor": "top",
           "yref": "y4 domain"
          },
          {
           "font": {
-           "size": 14
+           "size": 10
           },
           "showarrow": false,
           "text": "Honolulu, Hawaii",
-          "x": 0.95,
-          "xanchor": "right",
+          "x": 0.5,
+          "xanchor": "center",
           "xref": "x5 domain",
-          "y": 0.95,
+          "y": 0.87,
           "yanchor": "top",
           "yref": "y5 domain"
          },
          {
           "font": {
-           "size": 14
+           "size": 10
           },
           "showarrow": false,
           "text": "Mokuoloe",
-          "x": 0.95,
-          "xanchor": "right",
+          "x": 0.5,
+          "xanchor": "center",
           "xref": "x6 domain",
-          "y": 0.95,
+          "y": 0.87,
           "yanchor": "top",
           "yref": "y6 domain"
          },
          {
           "font": {
-           "size": 14
+           "size": 10
           },
           "showarrow": false,
           "text": "Nawiliwili",
-          "x": 0.95,
-          "xanchor": "right",
+          "x": 0.5,
+          "xanchor": "center",
           "xref": "x7 domain",
-          "y": 0.95,
+          "y": 0.87,
           "yanchor": "top",
           "yref": "y7 domain"
          },
          {
           "font": {
-           "size": 14
+           "size": 10
           },
           "showarrow": false,
           "text": "Midway",
-          "x": 0.95,
-          "xanchor": "right",
+          "x": 0.5,
+          "xanchor": "center",
           "xref": "x8 domain",
-          "y": 0.95,
+          "y": 0.87,
           "yanchor": "top",
           "yref": "y8 domain"
          },
@@ -3671,7 +3671,7 @@
           "x": 0.5,
           "xanchor": "center",
           "xref": "paper",
-          "y": -0.1,
+          "y": -0.12,
           "yref": "paper"
          },
          {
@@ -3688,8 +3688,8 @@
           "yref": "paper"
          }
         ],
-        "bargap": 0.1,
-        "height": 500,
+        "bargap": 0.2,
+        "height": 400,
         "margin": {
          "b": 50,
          "l": 50,
@@ -4514,7 +4514,7 @@
           }
          }
         },
-        "width": 600,
+        "width": 500,
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -4523,11 +4523,16 @@
          ],
          "linecolor": "lightgrey",
          "linewidth": 0.2,
+         "matches": "x",
          "mirror": true,
+         "range": [
+          1,
+          20
+         ],
          "showline": true,
          "showticklabels": false,
          "tickfont": {
-          "size": 10
+          "size": 8
          }
         },
         "xaxis2": {
@@ -4538,11 +4543,16 @@
          ],
          "linecolor": "lightgrey",
          "linewidth": 0.2,
+         "matches": "x",
          "mirror": true,
+         "range": [
+          1,
+          20
+         ],
          "showline": true,
          "showticklabels": false,
          "tickfont": {
-          "size": 10
+          "size": 8
          }
         },
         "xaxis3": {
@@ -4553,11 +4563,16 @@
          ],
          "linecolor": "lightgrey",
          "linewidth": 0.2,
+         "matches": "x",
          "mirror": true,
+         "range": [
+          1,
+          20
+         ],
          "showline": true,
          "showticklabels": false,
          "tickfont": {
-          "size": 10
+          "size": 8
          }
         },
         "xaxis4": {
@@ -4568,11 +4583,16 @@
          ],
          "linecolor": "lightgrey",
          "linewidth": 0.2,
+         "matches": "x",
          "mirror": true,
+         "range": [
+          1,
+          20
+         ],
          "showline": true,
          "showticklabels": false,
          "tickfont": {
-          "size": 10
+          "size": 8
          }
         },
         "xaxis5": {
@@ -4583,11 +4603,16 @@
          ],
          "linecolor": "lightgrey",
          "linewidth": 0.2,
+         "matches": "x",
          "mirror": true,
+         "range": [
+          1,
+          20
+         ],
          "showline": true,
          "showticklabels": false,
          "tickfont": {
-          "size": 10
+          "size": 8
          }
         },
         "xaxis6": {
@@ -4598,11 +4623,16 @@
          ],
          "linecolor": "lightgrey",
          "linewidth": 0.2,
+         "matches": "x",
          "mirror": true,
+         "range": [
+          1,
+          20
+         ],
          "showline": true,
          "showticklabels": false,
          "tickfont": {
-          "size": 10
+          "size": 8
          }
         },
         "xaxis7": {
@@ -4613,10 +4643,15 @@
          ],
          "linecolor": "lightgrey",
          "linewidth": 0.2,
+         "matches": "x",
          "mirror": true,
+         "range": [
+          1,
+          20
+         ],
          "showline": true,
          "tickfont": {
-          "size": 10
+          "size": 8
          }
         },
         "xaxis8": {
@@ -4627,10 +4662,15 @@
          ],
          "linecolor": "lightgrey",
          "linewidth": 0.2,
+         "matches": "x",
          "mirror": true,
+         "range": [
+          1,
+          20
+         ],
          "showline": true,
          "tickfont": {
-          "size": 10
+          "size": 8
          }
         },
         "yaxis": {
@@ -4644,7 +4684,7 @@
          "mirror": true,
          "showline": true,
          "tickfont": {
-          "size": 10
+          "size": 8
          }
         },
         "yaxis2": {
@@ -4658,7 +4698,7 @@
          "mirror": true,
          "showline": true,
          "tickfont": {
-          "size": 10
+          "size": 8
          }
         },
         "yaxis3": {
@@ -4672,7 +4712,7 @@
          "mirror": true,
          "showline": true,
          "tickfont": {
-          "size": 10
+          "size": 8
          }
         },
         "yaxis4": {
@@ -4686,7 +4726,7 @@
          "mirror": true,
          "showline": true,
          "tickfont": {
-          "size": 10
+          "size": 8
          }
         },
         "yaxis5": {
@@ -4700,7 +4740,7 @@
          "mirror": true,
          "showline": true,
          "tickfont": {
-          "size": 10
+          "size": 8
          }
         },
         "yaxis6": {
@@ -4714,7 +4754,7 @@
          "mirror": true,
          "showline": true,
          "tickfont": {
-          "size": 10
+          "size": 8
          }
         },
         "yaxis7": {
@@ -4728,7 +4768,7 @@
          "mirror": true,
          "showline": true,
          "tickfont": {
-          "size": 10
+          "size": 8
          }
         },
         "yaxis8": {
@@ -4742,7 +4782,7 @@
          "mirror": true,
          "showline": true,
          "tickfont": {
-          "size": 10
+          "size": 8
          }
         }
        }
@@ -4779,15 +4819,15 @@
     "\n",
     "    fig.add_trace(go.Histogram(\n",
     "        x=events,\n",
-    "        xbins=dict(start=1, end=19, size=1),  # Ensure each bin corresponds to 1 day\n",
+    "        xbins=dict(start=1, end=20, size=1),  # Ensure each bin corresponds to 1 day\n",
     "        marker=dict(color=\"rgba(31, 119, 180, 0.7)\", line=dict(width=1, color='rgba(31, 119, 180, 1)')),  # Blue color with transparency\n",
     "        showlegend=False,\n",
     "        hovertemplate=hovertemplate,\n",
     "    ), row=row, col=col)\n",
     "    \n",
     "    # Set outline for each subplot\n",
-    "    fig.update_xaxes(showline=True, linewidth=0.2, linecolor='lightgrey', mirror=True, row=row, col=col,tickfont=dict(size=10))\n",
-    "    fig.update_yaxes(showline=True, linewidth=0.2, linecolor='lightgrey', mirror=True, row=row, col=col,tickfont=dict(size=10))\n",
+    "    fig.update_xaxes(showline=True, linewidth=0.2, linecolor='lightgrey', mirror=True, row=row, col=col,tickfont=dict(size=8),range = [1,20], matches='x')\n",
+    "    fig.update_yaxes(showline=True, linewidth=0.2, linecolor='lightgrey', mirror=True, row=row, col=col,tickfont=dict(size=8),)\n",
     "    # fig.update_annotations(selector=dict(row=row, col=col), font=dict(size=12))  # Adjust title font size\n",
     "    \n",
     "    # Remove x-axis labels from all rows except the last one\n",
@@ -4796,14 +4836,14 @@
     "\n",
     "    fig.add_annotation(\n",
     "        text=station,\n",
-    "        x=0.95, y=0.95,  # Position in the top right corner\n",
+    "        x=0.5, y=0.87,  # Position in the top right corner\n",
     "        xref=\"x domain\",  # Reference the x-axis domain of the subplot\n",
     "        yref=\"y domain\",  # Reference the y-axis domain of the subplot\n",
     "        row=row,  # Reference the x-axis domain of the subplot\n",
     "        col=col,  # Reference the y-axis domain of the subplot\n",
     "        showarrow=False,\n",
-    "        font=dict(size=14),\n",
-    "        xanchor='right', yanchor='top'\n",
+    "        font=dict(size=10),\n",
+    "        xanchor='center', yanchor='top'\n",
     "    )\n",
     "\n",
     "\n",
@@ -4811,7 +4851,7 @@
     "fig.add_annotation(\n",
     "    text=\"Consecutive days above 30 cm MHHW\",\n",
     "    x=0.5,  # Centered horizontally\n",
-    "    y=-0.1,  # Position it below the bottom row of subplots\n",
+    "    y=-0.12,  # Position it below the bottom row of subplots\n",
     "    xref=\"paper\",\n",
     "    yref=\"paper\",\n",
     "    showarrow=False,\n",
@@ -4836,9 +4876,9 @@
     "\n",
     "# Adjust layout to ensure a white background and reduce spacing between plots\n",
     "fig.update_layout(\n",
-    "    height=500, width=600,  # Set the figure size\n",
+    "    height=400, width=500,  # Set the figure size\n",
     "    margin=dict(t=50, b=50, l=50, r=50),  # Ensure enough space for titles and labels\n",
-    "    bargap=0.1,  # Increase space between bars\n",
+    "    bargap=0.2,  # Increase space between bars\n",
     "    plot_bgcolor='white',  # Ensure the background of the plot is white\n",
     "    paper_bgcolor='white',  # Set the paper background color to white\n",
     ")\n",
@@ -4847,13 +4887,13 @@
     "fig.show()\n",
     "\n",
     "#save html\n",
-    "matrix_dir = Path('../matrix')\n",
-    "fig.write_html(matrix_dir / 'flood_duration_histograms.html')"
+    "matrix_dir = Path('../matrix/plotly')\n",
+    "fig.write_html(matrix_dir / 'flood_duration_histograms.html', full_html=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
