toying with IDF-ish things

--- a/notebooks/nonstationaryGEV/monthly_extremes_non-stationaryGEV.ipynb
+++ b/notebooks/nonstationaryGEV/monthly_extremes_non-stationaryGEV.ipynb
@@ -1068,13 +1068,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have the derivative function, we can use it to calculate the variance at each timestep by applying a first-order Taylor expansion, which assumes a locally linear relationship between the function and its parameters. The variance  $\\sigma^2$  at each timestep can be approximated as:\n",
+    "Now that we have the derivative function, we can use it to calculate the variance of our estimated return level at each timestep by applying a first-order Taylor expansion, which assumes a locally linear relationship between the function and its parameters. The variance  $\\sigma^2$  at each timestep can be approximated as:\n",
     "\n",
     "\n",
-    "$\\sigma^2 \\approx \\mathbf{J} \\cdot \\mathbf{Cov}(w) \\cdot \\mathbf{J}^T$\n",
+    "$\\sigma^2 \\approx \\mathbf{J}^T \\cdot \\mathbf{Cov}(w) \\cdot \\mathbf{J}$\n",
     "\n",
     "\n",
-    "where  $\\mathbf{J}$  is the Jacobian (the vector of partial derivatives with respect to the parameters), and  $\\mathbf{Cov}(w)$  is the covariance matrix of the parameters. This approach propagates the uncertainties in the parameters into the uncertainty of the return level. The square root of the variance  $\\sigma$  gives the standard deviation, which quantifies the uncertainty at each timestep and serves as the basis for calculating confidence intervals."
+    "where  $\\mathbf{J}$  is the Jacobian (the vector of partial derivatives with respect to the parameters), and  $\\mathbf{Cov}(w)$  is the variance-covariance matrix of the parameters. This approach propagates the uncertainties in the parameters into the uncertainty of the return level. The square root of the variance  $\\sigma$  gives the standard deviation, which quantifies the uncertainty at each timestep and serves as the basis for calculating confidence intervals.\n",
+    "\n",
+    "Note this equation is functionally equivalent to Coles (2001) Theorem 2.4 (the \"delta method.\")"
    ]
   },
   {
@@ -1085,8 +1087,8 @@
    "source": [
     "def calculate_std(w, x, t00,t11, T,serieCV, mio, r):\n",
     "    \n",
-    "\n",
-    "    cov_params = np.linalg.inv(mio) # the covariance matrix of the parameters is the inverse of the Hessian matrix (mio is the Hessian)\n",
+    "    # Note here that \"mio\" stands for \"Maximum Information Operator\" and is same as the Hessian matrix\n",
+    "    cov_params = np.linalg.inv(mio) # the covariance matrix of the parameters is the inverse of the Hessian\n",
     "    n = len(w)\n",
     "    Zp1 = np.zeros(n)\n",
     "\n",
@@ -1101,8 +1103,9 @@
     "    # remove elements of J where wbest is zero (parameter not included, J should be 0 here as well anyway...)\n",
     "    J = J[wbest != 0] ## is this correct? I think so...\n",
     "\n",
+    "    # Note here J is a row vector\n",
     "    # propagate the covariance matrix (e.g. 1x9 * 9x9 * 9x1 = 1x1)\n",
-    "    cov_solution = J @ cov_params @ J.T  #should be a scalar!\n",
+    "    cov_solution = J @ cov_params @ J.T  #should be a scalar! \n",
     "\n",
     "    # calculate the standard error (square root of the scalar variance)\n",
     "    ic_sqrt = np.sqrt(cov_solution)\n",
